# STM32F4_USB_to_cJTAG

./: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32F401RCTx_FLASH.ld  stm32f401rct6.ioc
.env/: Makefile  STM32F401RCTX_FLASH.ld  debug.cfg
.env/cmake/: CMakeLists.txt  clang-llvm.cmake  clang-llvmb.cmake  gcc-arm-none-eabi.cmake  gcc-arm-none-eabib.cmake  gcc-riscv64-unknown-elf.cmake
.env/cmake/stm32cubemx/: CMakeLists.txt
.env/stroge/: W25Q32.c  W25Q32.h
.env/stroge/Log/: log.c  log.h
.env/stroge/RTT/: SEGGER_RTT_Conf.h
.env/stroge/SpiFlash/: test_spi.c  w25qxx.c  w25qxx.h
.env/stroge/src/Drivers/CMSIS/Include/: arm_etm.h
.env/stroge/src/Drivers/HAL_Driver/Inc/: hal_def.h  hal_flash.h  hal_gpio.h  hal_rcc.h  hal_spi.h  hal_usart.h
.env/stroge/src/Drivers/HAL_Driver/Src/: hal_flash.c  hal_gpio.c  hal_rcc.c  hal_spi.c  hal_usart.c
.env/stroge/src/Drivers/MinRTOS/Inc/: MinRTOS.h  list.h  portmacro.h  task.h
.env/stroge/src/Drivers/MinRTOS/Src/: list.c  (+2 more)
.env/stroge/src/app/: log.c  main.c  misc.c  startup.c  stm32f1xx_irq.c  stm32f1xx_sys.c  syscall.c
.env/stroge/src/app/Inc/: log.h  tools.h
Core/Inc/: main.h
Core/RTT/: SEGGER_RTT.c  SEGGER_RTT_Conf.h  log.c  log.h  openocd_tool.c  openocd_tool.h
Core/Src/: cJTAG.c  main.c  stm32f4xx_hal_msp.c
Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_def.h
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_ctlreq.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
cmake/: gcc-arm-none-eabi.cmake
cmake/app/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt
(+2 files in other folders)
